Fix CORS: Add Vercel domain support for production deployment
- Updated WebSecurityConfig.java to use environment variable for CORS origins
- Added @Value annotation to read CORS_ORIGINS from properties
- Updated application-production.properties to include Vercel domain
- This resolves 'No Access-Control-Allow-Origin header' error in production